<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walking_zoo_gait_lab_sil</name>
  <version>0.1.0</version>
  <description>
    Software-in-the-loop walking_zoo adapter that drives a MuJoCo Unitree G1
    through a gait_lab controller (default: the reinforcement-learned rl-residual
    policy). A thin ROS bridge to a companion Python sim node; carries no
    MuJoCo/Python build dependency.
  </description>
  <maintainer email="maintainers@example.com">walking_zoo maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>walking_zoo_core</depend>
  <depend>walking_zoo_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
