<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walking_zoo_unitree_go2</name>
  <version>0.1.0</version>
  <description>Unitree Go2 quadruped sport-mode adapter for walking_zoo with a software-in-the-loop command/FSM model.</description>
  <maintainer email="maintainers@example.com">walking_zoo maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>walking_zoo_core</depend>
  <depend>walking_zoo_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
